<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">budgeter</string>

    <string name="action_settings">Settings</string>
    <string name="accounts_list">Account balances list</string>
    <string name="total">Total:</string>
    <string name="button_add_funds">Add Funds</string>
    <string name="title_activity_add_funds">Add Funds</string>
    <string name="title_activity_funds_mutation">Add Operation</string>

    <string name="amount_decimal_hint">Amount</string>
    <string name="amount_currency_hint">Currency</string>
    <string name="amount_currency_null_val">No currency</string>
    <string name="add_funds_finish_button">Add</string>

    <string name="direction_benefit">Benefit</string>
    <string name="direction_loss">Loss</string>
    <string name="funds_mutation_finish_button">Finish</string>
    <string name="accounts_spinner_prompt">Balance accounts</string>
    <string name="accounts_spinner_null_val">No account</string>
    <string name="add_button_general" translatable="false">+</string>
    <string name="remove_button_general" translatable="false">-</string>
    <string name="account_name_hint">Account name</string>
    <string name="account_starting_sum_hint">Starting sum</string>
    <string name="accounts_submit_button">Submit</string>
    <string name="optional_with_colons">(Optional)</string>
    <string name="funds_mutation_subject_cost_text">Subject cost:</string>
    <string name="funds_mutation_payed_amount_text">Actual paid amount:</string>
    <string name="subject_name_hint">Subject name</string>
    <string name="subjects_spinner_prompt">Available subjects</string>
    <string name="subjects_spinner_null_val">No subject</string>
    <string name="subject_parent_hint">Subject parent name (if any)</string>
    <string name="type_product">Product</string>
    <string name="type_service">Service</string>
    <string name="type_occasion">Occasion</string>
    <string name="funds_mutation_subject_text">Funds operation subject:</string>
    <string name="natural_rate_text">Today\'s exchange rate:</string>
    <string name="custom_rate_text">Custom deal rate:</string>
    <string name="funds_mutation_relevant_balance_text">Relevant balance account:</string>
    <string name="funds_mutation_quantity_text">Quantity of subjects:</string>
    <string name="agents_spinner_prompt">Available agents</string>
    <string name="agents_spinner_null_val">No agent</string>
    <string name="agent_name_hint">Agent name</string>
    <string name="op_agent_text">Operation agent (e.g. a place where the deal broke)</string>
    <string name="enter_datetime_text">Enter date and time of operation:</string>
    <string name="button_mutate_funds">Register operation</string>
    <string name="funds_mutation_payed_amount_box_text">Drop paid amount</string>
    <string name="funds_mutation_subject_cost_box_text">Drop subject cost</string>
    <string name="ah_ops_table_col_time">Op time</string>
    <string name="common_table_col_subj">Subject</string>
    <string name="ah_ops_table_col_money">Money</string>
    <string name="ah_ops_table_col_account">Account</string>
    <string name="ah_ops_table_header">Recent operations</string>
    <string name="ah_exchanges_table_header">Recent exchanges</string>
    <string name="ah_exchanges_table_col_bought">Bought</string>
    <string name="ah_exchanges_table_col_sold">Sold</string>
    <string name="ah_exchanges_table_col_b_acc">B-Acc</string>
    <string name="ah_exchanges_table_col_s_acc">S-Acc</string>
    <string name="ah_exchanges_table_col_rate">Rate</string>
    <string name="button_register_exchange">Register exchange</string>
    <string name="exchange_currencies_buy_amount_text">Buy amount:</string>
    <string name="exchange_currencies_sell_amount_text">Sell amount:</string>
    <string name="exchange_currencies_buy_account_text">Buy currency account:</string>
    <string name="exchange_currencies_sell_account_text">Sell currency account:</string>
    <string name="exchange_currencies_finish_button">Finish</string>
    <string name="title_activity_exchange_currencies">Add Exchange</string>
    <string name="data_table_no_rows">No Data</string>
    <string name="button_mutations_table">View operations</string>
    <string name="button_exchanges_table">View exchanges</string>
    <string name="title_activity_mutations_table">Operations table</string>
    <string name="ah_ops_table_col_agent">Where occurred</string>
    <string name="mutations_table_header">Explore operations</string>
    <string name="exchanges_table_header">Explore exchanges</string>
    <string name="title_activity_exchanges_table">Exchanges table</string>
    <string name="button_reset_db">Reset DB</string>
    <string name="button_success">Success</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_db_reset_dialog_text">This will clear out all your data. Are you sure?</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="button_process_postponed">Process postponed</string>
    <string name="attention_exclamation">Attention!</string>
    <string name="work_finished_phraze">Work finished</string>
    <string name="settings_succeeded_postponed_message_start">Succeeded postponed</string>
    <string name="settings_failed_postponed_message_start">Failed postponed</string>
    <string name="error_occurred_phraze">Error occurred</string>
    <string name="common_done">Done</string>
    <string name="agent_desc_hint">Agent description</string>
    <string name="subjects_desc_hint">Subject description</string>
    <string name="accounts_desc_hint">Account description</string>
    <string name="title_activity_add_price">Add Price</string>
    <string name="price_subject_text">Product/service to price</string>
    <string name="price_agent_text">Place where product/service is priced</string>
    <string name="price_price_text">Enter the price</string>
    <string name="price_finish_button">Add price</string>
    <string name="price_add_success">Price add succeeded!</string>
    <string name="button_add_price">Add price</string>
    <string name="price_date_text">Enter date of the price</string>
    <string name="funds_add_success">Funds addition succeeded!</string>
    <string name="register_exchange_success">Registering exchange succeeded!</string>
    <string name="register_exchange_failure">Registering exchange failed - check out field errors</string>
    <string name="register_mutation_success">Registering operation succeeded!</string>
    <string name="register_mutation_failure">Registering operation failed - check out field errors</string>
    <string name="price_show_button">Show</string>
    <string name="title_activity_prices">Monitor prices</string>
    <string name="prices_table_col_day">Day</string>
    <string name="prices_table_col_price">Price</string>
    <string name="prices_table_col_subject">Subject</string>
    <string name="prices_table_col_agent">Agent</string>
    <string name="button_prices">Explore prices</string>
    <string name="funds_mutation_portion_text">Subject portion</string>
    <string name="funds_mutation_portion_box_text">Operating on portion</string>
    <string name="button_backup_db">Backup DB</string>
    <string name="button_restore_db">Restore DB</string>
    <string name="settings_db_restore_dialog_text">You will loose any data that is newer than backup. Proceed?</string>
    <string name="refreshing_leveled_adapter_up_str">Up</string>
    <string name="subjects_spinner_refresh_failed">Refreshing subjects spinner failed, already refreshing</string>
    <string name="title_activity_balances_transfer">Transfer Funds</string>
    <string name="balances_transfer_finish_button">Transfer</string>
    <string name="balances_transfer_second_accounts_spinner_prompt">Receiver account</string>
    <string name="balances_transfer_success">Balances transfer succeeded!</string>
    <string name="button_balances_transfer">Transfer funds</string>

</resources>
