<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/activity_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".HomeActivity">

        <TextView
            android:id="@+id/ah_account_balances"
            android:text="@string/accounts_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ah_funds_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ah_account_balances"
            android:gravity="end">
        </LinearLayout>

        <Button
            android:id="@+id/ah_add_funds_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ah_funds_list"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_add_funds"
            android:onClick="startAddFundsActivity" />
        <Button
            android:id="@+id/ah_mutate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ah_add_funds_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_mutate_funds"
            android:onClick="startFundsMutationActivity" />
        <Button
            android:id="@+id/ah_exchange_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ah_mutate_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_register_exchange"
            android:onClick="startExchangeCurrenciesActivity" />

        <Button
            android:id="@+id/ah_mutations_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ah_exchange_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_mutations_table"
            android:onClick="startMutationsTableActivity" />
        <Button
            android:id="@+id/ah_exchanges_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ah_mutations_table_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_exchanges_table"
            android:onClick="startExchangeCurrenciesActivity" />

    </RelativeLayout>
</ScrollView>
