<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.adios.budgeter.fragments.FundsSubjectFragment">

    <ru.adios.budgeter.widgets.RefreshingSpinner
        android:id="@+id/subjects_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/subjects_spinner_prompt"
        android:spinnerMode="dialog"/>
    <Button
        android:id="@+id/subjects_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/subjects_spinner"
        android:layout_toEndOf="@id/subjects_spinner"
        android:layout_alignTop="@id/subjects_spinner"
        android:layout_alignBottom="@id/subjects_spinner"
        android:background="@drawable/round_button"
        android:text="@string/add_button_general"
        android:textColor="#fff"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/subjects_spinner_info"
        android:layout_width="0dp"
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/subjects_add_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/subjects_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_name_hint"
        android:layout_below="@+id/subjects_spinner_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:visibility="gone"/>
        <!--android:visibility="visible"/>-->
    <TextView
        android:id="@+id/subjects_name_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/subjects_name_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/subjects_parent_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subjects_name_input_info"
        android:visibility="gone">
        <!--android:visibility="visible">-->

        <ru.adios.budgeter.widgets.DelayingAutoCompleteTextView
            android:id="@+id/subjects_parent_name_input"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="32dp"
            android:paddingEnd="32dp"
            android:hint="@string/subject_parent_hint"
            android:imeOptions="flagNoExtractUi|actionSearch"
            tools:ignore="RtlSymmetry" />

        <ProgressBar
            android:id="@+id/subjects_parent_name_input_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>
    </FrameLayout>
    <TextView
        android:id="@+id/subjects_parent_name_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/subjects_parent_name_input_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/subjects_type_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/subjects_parent_name_input_info"
        android:orientation="horizontal"
        android:visibility="gone">
        <!--android:visibility="visible">-->

        <RadioButton
            android:id="@+id/type_product"
            android:text="@string/type_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/type_service"
            android:text="@string/type_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/type_occasion"
            android:text="@string/type_occasion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <TextView
        android:id="@+id/subjects_type_radio_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/subjects_type_radio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <EditText
        android:id="@+id/subjects_desc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="70%"
        android:hint="@string/subjects_desc_hint"
        android:layout_below="@id/subjects_type_radio_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:visibility="gone" />
    <TextView
        android:id="@+id/subjects_desc_optional"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/subjects_desc_input"
        android:layout_toEndOf="@id/subjects_desc_input"
        android:layout_alignTop="@id/subjects_desc_input"
        android:layout_alignBottom="@id/subjects_desc_input"
        android:gravity="center_vertical"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_widthPercent="30%"
        android:layout_below="@id/subjects_type_radio_info"
        android:text="@string/optional_with_colons"
        android:visibility="gone" />
    <TextView
        android:id="@+id/subjects_desc_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/subjects_desc_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/subjects_submit_button"
        android:layout_width="0dp"
        app:layout_widthPercent="30%"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjects_desc_input_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/accounts_submit_button"
        android:visibility="gone"/>
        <!--android:visibility="visible"/>-->

</android.support.percent.PercentRelativeLayout>
