<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.adios.budgeter.fragments.AccountStandardFragment">

    <ru.adios.budgeter.widgets.FlexibleNotifyingSpinner
        android:id="@+id/accounts_spinner"
        android:layout_width="50dp"
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:prompt="@string/accounts_spinner_prompt"
        android:spinnerMode="dropdown"/>
    <Button
        android:id="@+id/accounts_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/accounts_spinner"
        android:layout_toEndOf="@id/accounts_spinner"
        android:layout_alignTop="@id/accounts_spinner"
        android:layout_alignBottom="@id/accounts_spinner"
        android:background="@drawable/round_button"
        android:text="@string/add_button_general"
        android:textColor="#fff"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/accounts_spinner_info"
        android:layout_width="80dp"
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/accounts_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/accounts_name_input"
        android:layout_width="80dp"
        app:layout_widthPercent="60%"
        android:layout_height="wrap_content"
        android:hint="@string/account_name_hint"
        android:layout_below="@+id/accounts_spinner_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/accounts_name_input_info"
        android:layout_width="80dp"
        app:layout_widthPercent="60%"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/accounts_name_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />
    <Spinner
        android:id="@+id/accounts_currency_input"
        android:layout_width="0dp"
        app:layout_widthPercent="40%"
        android:layout_height="40dp"
        android:prompt="@string/amount_currency_hint"
        android:layout_toRightOf="@id/accounts_name_input"
        android:layout_toEndOf="@id/accounts_name_input"
        android:layout_alignTop="@id/accounts_name_input"
        android:layout_alignBottom="@id/accounts_name_input"
        android:spinnerMode="dropdown"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/accounts_currency_input_info"
        android:layout_width="0dp"
        app:layout_widthPercent="40%"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/accounts_currency_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

    <EditText
        android:id="@+id/accounts_amount_optional_input"
        android:layout_width="0dp"
        app:layout_widthPercent="30%"
        android:layout_height="wrap_content"
        android:hint="@string/account_starting_sum_hint"
        android:layout_below="@id/accounts_currency_input_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/accounts_amount_optional_input"
        android:layout_toLeftOf="@id/accounts_amount_optional_input"
        android:layout_toStartOf="@id/accounts_amount_optional_input"
        android:id="@+id/accounts_amount_optional_input_hint"
        android:text="@string/optional_with_colons"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/accounts_amount_optional_input_info"
        android:layout_width="0dp"
        app:layout_widthPercent="30%"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/accounts_amount_optional_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

    <EditText
        android:id="@+id/accounts_desc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="70%"
        android:hint="@string/accounts_desc_hint"
        android:layout_below="@id/accounts_amount_optional_input_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:visibility="gone" />
    <TextView
        android:id="@+id/accounts_desc_optional"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/accounts_desc_input"
        android:layout_toEndOf="@id/accounts_desc_input"
        android:layout_alignTop="@id/accounts_desc_input"
        android:layout_alignBottom="@id/accounts_desc_input"
        android:gravity="center_vertical"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_widthPercent="30%"
        android:layout_below="@id/accounts_amount_optional_input_info"
        android:text="@string/optional_with_colons"
        android:visibility="gone" />
    <TextView
        android:id="@+id/accounts_desc_input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#af0b0b"
        android:layout_below="@id/accounts_desc_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/accounts_submit_button"
        android:layout_width="0dp"
        app:layout_widthPercent="30%"
        android:layout_height="wrap_content"
        android:layout_below="@id/accounts_desc_input_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/accounts_submit_button"
        android:visibility="gone"/>

</android.support.percent.PercentRelativeLayout>
